--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,21 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  <error-page>
+    <!-- Missing login -->
+    <error-code>401</error-code>
+    <location>/WEB-INF/views/401.jsp</location>
+</error-page>
+
+<error-page>
+    <!-- Missing resource -->
+    <error-code>404</error-code>
+    <location>/WEB-INF/views/404.jsp</location>
+</error-page>
+<error-page>
+    <!-- Uncaught exception -->
+    <error-code>500</error-code>
+    <location>/WEB-INF/views/500.jsp</location>
+</error-page>
+
 </web-app>
